--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -9,143 +9,156 @@ video {
   }
 }
 
-.controls {
-  .container-progress-bar-video {
-    cursor: pointer;
+input[type="range"] {
+  cursor: pointer;
+  margin: unset;
+}
 
-    .progress-bar-video {
-      width: 100%;
-      margin-bottom: 5px;
-      border: none;
-      vertical-align: middle;
-      background: #0075ff;
-    }
+.wrapper-video {
+  display: flex;
 
-    .progress-bar-video[value] {
-      &::-webkit-progress-bar {
-        background-color: #8432ca;
-        border-radius: 2px;
-      }
-    }
-
-    .progress-bar-video[value] {
-      &::-webkit-progress-value {
-        background-color: #0075ff;
-      }
-    }
-  }
-
-  .container-buttons-controls {
-    display: flex;
-    justify-content: space-between;
-
-    .btn-controls, .btn-popup-controls {
+  .left-video-container {
+    .containerFullScreen {
       display: flex;
       justify-content: center;
-      padding: unset;
-      border: none;
-      background: none;
-      outline: none;
-      cursor: pointer;
-    }
-
-    .btn-controls {
-      width: 25px;
-    }
-
-    .btn-popup-controls {
-      width: 100%;
-      height: 35px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-
-    .btn-bottom-border {
-      border-bottom: 1px solid #626767;
-    }
-
-    .control-play-pause-volume {
-      display: flex;
       align-items: center;
-    }
+      flex-direction: column;
 
-    .control-time {
-      width: 85px;
-      font-size: 14px;
-      color: #0075ff;
-    }
-
-    .other-controls {
-      display: flex;
-
-      .highlightLoopVideoSegment {
-        filter: saturate(13);
+      .videoFullScreen {
+        width: 100%;
+        height: 100%;
       }
 
-      .container-popup-other-controls {
-        position: relative;
-        top: 0;
-        left: 0;
+      .controlsFullScreen {
+        width: 100%;
+        margin-bottom: 15px;
+      }
+    }
 
-        .other-controls-hidden {
-          display: none;
+    .controls {
+      .container-progress-bar-video {
+        cursor: pointer;
 
-          .container-zoom {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            font-size: 16px;
+        .progress-bar-video {
+          width: 100%;
+          margin-bottom: 5px;
+          border: none;
+          vertical-align: middle;
+          background: #0075ff;
+        }
+
+        .progress-bar-video[value] {
+          &::-webkit-progress-bar {
+            background-color: #8432ca;
+            border-radius: 2px;
+          }
+        }
+
+        .progress-bar-video[value] {
+          &::-webkit-progress-value {
+            background-color: #0075ff;
+          }
+        }
+      }
+
+      .container-buttons-controls {
+        display: flex;
+        justify-content: space-between;
+
+        .btn-controls, .btn-popup-controls {
+          display: flex;
+          justify-content: center;
+          padding: unset;
+          border: none;
+          background: none;
+          outline: none;
+          cursor: pointer;
+        }
+
+        .btn-controls {
+          width: 25px;
+        }
+
+        .btn-popup-controls {
+          width: 100%;
+          height: 35px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+        }
+
+        .btn-bottom-border {
+          border-bottom: 1px solid #626767;
+        }
+
+        .control-play-pause-volume {
+          display: flex;
+          align-items: center;
+        }
+
+        .control-time {
+          width: 85px;
+          font-size: 14px;
+          color: #0075ff;
+        }
+
+        .other-controls {
+          display: flex;
+
+          .highlightLoopVideoSegment {
+            filter: saturate(13);
           }
 
-          .btn-increase-zoom {
-            border-right: 1px solid black;
-          }
+          .container-popup-other-controls {
+            position: relative;
+            top: 0;
+            left: 0;
 
-          .btn-decrease-zoom,
-          .btn-increase-zoom,
-          .btn-snapshot {
-            &:hover {
-              background: #a5e0e9;
+            .other-controls-hidden {
+              display: none;
+
+              .container-zoom {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                font-size: 16px;
+              }
+
+              .btn-increase-zoom {
+                border-right: 1px solid black;
+              }
+
+              .btn-decrease-zoom,
+              .btn-increase-zoom,
+              .btn-snapshot {
+                &:hover {
+                  background: #a5e0e9;
+                }
+              }
+            }
+
+            .popupOtherControls {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column-reverse;
+              position: absolute;
+              width: 100px;
+              top: -93px;
+              right: 0;
+              background-color: #d1f2f8;
+              border: 1px solid #acbec4;
             }
           }
         }
-
-        .popupOtherControls {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column-reverse;
-          position: absolute;
-          width: 100px;
-          top: -93px;
-          right: 0;
-          background-color: #d1f2f8;
-          border: 1px solid #acbec4;
-        }
       }
     }
   }
-}
 
-.containerFullScreen {
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-
-.videoFullScreen {
-width: 100%;
-height: 100%;
-}
-
-.controlsFullScreen {
-width: 100%;
-margin-bottom: 15px;
-}
-}
-
-input[type="range"] {
-cursor: pointer;
-margin: unset;
+  .right-video-container {
+    display: flex;
+    width: 300px;
+    height: 500px;
+    overflow: visible;
+  }
 }
