--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -156,9 +156,9 @@ input[type="range"] {
   }
 
   .right-video-container {
-    display: flex;
-    width: 300px;
-    height: 500px;
-    overflow: visible;
+    width: 250px;
+    height: 300px;
+    margin-top: 18px;
+    overflow: auto;
   }
 }
