feat(video-play-list): add local video and style for video play list

--- a/src/app/html-video-player/video-play-list/video-play-list.component.html
+++ b/src/app/html-video-player/video-play-list/video-play-list.component.html
@@ -4,6 +4,7 @@
       [width]="list.videoOptions.width"
       [height]="list.videoOptions.height"
       [src]="list.videoOptions.src"
+      [poster]="list.videoOptions.poster"
       [muted]="list.videoOptions.muted"
     ></video>
   </div>
