--- a/src/app/html-video-player/video-play-list/video-play-list.component.scss
+++ b/src/app/html-video-player/video-play-list/video-play-list.component.scss
@@ -1,5 +1,12 @@
 .container-video {
   border-bottom: 1px solid slateblue;
+  cursor: pointer;
+
+  &:hover {
+    background: #f1f5f6;
+    box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.5);
+    border-radius: 2px;
+  }
 
   .video {
     padding-top: 10px;
