fix(html-video-player): update time after click on progreress bar if video on pause

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -110,6 +110,6 @@
     <!-- end output snapshot -->
   </section>
   <section class="right-video-container">
-    <app-video-play-list #videoPlayList (emitVideo)="emitVideo($event)"></app-video-play-list>
+    <app-video-play-list #videoPlayList (emitVideo)="changePropertiesVideo($event)"></app-video-play-list>
   </section>
 </section>
