feat(html-video-player): change scroll bar for video play list

--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -1,3 +1,25 @@
+@mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white,  50%)) {
+  // For Google Chrome
+  &::-webkit-scrollbar {
+    width:  $size;
+    height: $size;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $foreground-color;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $background-color;
+  }
+
+  // For Internet Explorer
+  & {
+    scrollbar-face-color: $foreground-color;
+    scrollbar-track-color: $background-color;
+  }
+}
+
 video {
   &::-webkit-media-controls{
     display:none !important;
@@ -156,6 +178,7 @@ input[type="range"] {
   }
 
   .right-video-container {
+    @include scrollbars(.5em, slateblue);
     width: 250px;
     height: 300px;
     margin-top: 18px;
