--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -119,6 +119,7 @@ input[type="range"] {
 
         .control-time {
           width: 85px;
+          margin-left: 10px;
           font-size: 14px;
           color: #0075ff;
         }
