feat(video-play-list): output duration for video play list

--- a/src/app/html-video-player/video-play-list/video-play-list.component.html
+++ b/src/app/html-video-player/video-play-list/video-play-list.component.html
@@ -5,12 +5,20 @@
 >
   <div class="video">
     <video
+      #video
+      [appCalculateTimeVideo]="video"
+      [videoId]="list.id"
+      (calcDuration)="calculateDuration($event)"
       [width]="list.videoOptions.width"
       [height]="list.videoOptions.height"
       [src]="list.videoOptions.src"
       [poster]="list.videoOptions.poster"
       [muted]="list.videoOptions.muted"
+      preload="metadata"
     ></video>
+    <span class="video-duration">
+      {{list.duration}}
+    </span>
   </div>
   <div class="title-video">
     <span>{{list.title}}</span>
