--- a/src/app/html-video-player/video-play-list/video-play-list.component.scss
+++ b/src/app/html-video-player/video-play-list/video-play-list.component.scss
@@ -10,6 +10,20 @@
   }
 
   .video {
+    position: relative;
     padding-top: 10px;
+
+    .video-duration {
+      position: absolute;
+      bottom: 10px;
+      right: 45px;
+      font-size: 14px;
+      font-family: serif;
+      color: white;
+    }
+  }
+
+  .video video {
+    object-fit: fill;
   }
 }
