feat(html-video-player): add UI for timeline on progress bar after zoom

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -30,6 +30,13 @@
           max="98"
           [value]="progressBarVideoValue"
         ></progress>
+        <table class="timeline">
+          <tr>
+            <td class="segment"></td>
+            <td class="segment"></td>
+            <td class="segment"></td>
+          </tr>
+        </table>
       </div>
       <!-- end progress bar -->
 
