feat(html-video-player): add UI for progress bar after use zoom

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -105,10 +105,10 @@
 
                 <!-- start two buttons for video zoom -->
                 <div class="container-zoom">
-                  <button class="btn-popup-controls btn-bottom-border btn-increase-zoom" (click)="zoomInVideo()">
+                  <button class="btn-popup-controls btn-bottom-border btn-increase-zoom" (click)="zoomInProgressBar()">
                     +P
                   </button>
-                  <button class="btn-popup-controls btn-bottom-border btn-decrease-zoom" (click)="zoomOutVideo()">
+                  <button class="btn-popup-controls btn-bottom-border btn-decrease-zoom" (click)="zoomOutProgressBar()">
                     &#8722;P
                   </button>
                 </div>
