--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -94,6 +94,7 @@ input[type="range"] {
 
           .segment {
             border: 1px solid black;
+            border-radius: 20px;
           }
         }
       }
