--- a/src/app/html-video-player/zoom-progress-bar/zoom-progress-bar.component.scss
+++ b/src/app/html-video-player/zoom-progress-bar/zoom-progress-bar.component.scss
@@ -1,3 +1,8 @@
-#chart {
-  margin-bottom: 50px;
+section {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;
 }
