--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -28,10 +28,13 @@
             class="progress-bar-video"
             max="98"
             [value]="progressBarVideoValue"
-          ></progress>
+          >
+          </progress>
         </div>
         <!-- end progress bar -->
-
+        <ng-container *ngIf="shouldSecondsDuration()">
+          <app-zoom-progress-bar [duration]="secondsDuration"></app-zoom-progress-bar>
+        </ng-container>
         <!-- start button controls -->
         <div class="container-buttons-controls">
           <div class="control-play-pause-volume">
@@ -113,9 +116,6 @@
           <!-- end other-controls -->
         </div>
         <!-- end button controls -->
-        <ng-container *ngIf="shouldSecondsDuration()">
-          <app-zoom-progress-bar [duration]="secondsDuration"></app-zoom-progress-bar>
-        </ng-container>
       </figcaption>
       <!-- end video controls -->
     </figure>
