--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.progress-line {
+  stroke: #75beda;
+  stroke-width: 5px;
+  stroke-linecap: round;
+}
