feat(zoom-progress-bar): add dynamic widht for timeline

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -36,6 +36,7 @@
         <ng-container *ngIf="shouldSecondsDuration()">
           <app-zoom-progress-bar
             [duration]="secondsDuration"
+            [currentTimeForProgressBar]="currentTimeForProgressBar"
             (emitOnClickTimeLine)="timeUpdateAfterClickOnTimeline($event)"
           ></app-zoom-progress-bar>
         </ng-container>
