--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -1,7 +1,8 @@
 <section class="wrapper-video">
   <section class="left-video-container">
-    <figure class="container-video" #containerVideoElement [ngClass]="{containerFullScreen: isFullScreen}">
+    <figure #containerVideoElement [ngClass]="{containerFullScreen: isFullScreen}">
       <video
+        class="video-payer"
         #video
         [appCalculateTimeVideo]="video"
         (calcDuration)="calculateDurationAfterFirstInitVideo($event)"
@@ -64,7 +65,7 @@
               />
             </ng-container>
 
-            <div class="control-time">
+            <div class="time-control">
               <ng-container *ngIf="currentTime.length">
                 {{currentTime}} / {{duration}}
               </ng-container>
@@ -91,29 +92,6 @@
                 <button class="btn-popup-controls btn-snapshot" (click)="snapshot()">
                   <img src="assets/images/icons/snapshot.png" alt="snapshot"/>
                 </button>
-
-                <!-- start two buttons for video zoom -->
-                <div class="container-zoom">
-                  <button class="btn-popup-controls btn-bottom-border btn-increase-zoom" (click)="zoomInVideo()">
-                    +V
-                  </button>
-                  <button class="btn-popup-controls btn-bottom-border btn-decrease-zoom" (click)="zoomOutVideo()">
-                    &#8722;V
-                  </button>
-                </div>
-                <!-- end two buttons for video zoom -->
-
-                <!-- start two buttons for video zoom -->
-                <div class="container-zoom">
-                  <button class="btn-popup-controls btn-bottom-border btn-increase-zoom" (click)="zoomInProgressBar()">
-                    +P
-                  </button>
-                  <button class="btn-popup-controls btn-bottom-border btn-decrease-zoom" (click)="zoomOutProgressBar()">
-                    &#8722;P
-                  </button>
-                </div>
-                <!-- end two buttons for video zoom -->
-
               </div>
             </div>
           </div>
