--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -41,6 +41,13 @@ input[type="range"] {
   margin-top: 20px;
 
   .left-video-container {
+    display: flex;
+    flex-direction: column;
+
+    .video-payer {
+      object-fit: fill;
+    }
+
     .containerFullScreen {
       display: flex;
       justify-content: center;
@@ -133,7 +140,7 @@ input[type="range"] {
           align-items: center;
         }
 
-        .control-time {
+        .time-control {
           width: 85px;
           margin-left: 10px;
           font-size: 14px;
@@ -183,7 +190,7 @@ input[type="range"] {
               flex-direction: column-reverse;
               position: absolute;
               width: 70px;
-              top: -134px;
+              top: -64px;
               right: 0;
               background-color: #d1f2f8;
               border: 1px solid #acbec4;
