refactor(html-video-payer): remove console log

--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -55,6 +55,7 @@ input[type="range"] {
       flex-direction: column;
 
       .videoFullScreen {
+        object-fit: contain;
         width: 100%;
         height: 100%;
       }
