--- a/src/app/html-video-player/video-play-list/video-play-list.component.scss
+++ b/src/app/html-video-player/video-play-list/video-play-list.component.scss
@@ -1,7 +1,6 @@
 .container-video {
   padding-left: 5px;
   border-bottom: 1px solid slateblue;
-  cursor: pointer;
 
   &:hover {
     background: #f1f5f6;
@@ -10,8 +9,11 @@
   }
 
   .video {
+    display: flex;
+    justify-content: flex-start;
     position: relative;
     padding-top: 10px;
+    cursor: pointer;
 
     .video-duration {
       position: absolute;
@@ -20,6 +22,22 @@
       font-size: 14px;
       font-family: serif;
       color: white;
+    }
+
+    .remove {
+      margin-top: -8px;
+      height: 0;
+      font-size: 30px;
+      color: #cc9a9a;
+      background: none;
+      border: none;
+      visibility: hidden;
+      transition: visibility .2s linear;
+      cursor: pointer;
+    }
+
+    &:hover .remove {
+      visibility: visible;
     }
   }
 
